<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:fillViewport="true"
    tools:context=".EditorActivity">

    <!--Editor Activity Layout-->
    <LinearLayout
        style="@style/MatchMatch"
        android:orientation="vertical"
        android:padding="@dimen/editor_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_image"
                android:layout_width="@dimen/editor_image_size"
                android:layout_height="@dimen/editor_image_size"
                android:contentDescription="@string/app_name"
                android:clickable="true"
                android:src="@drawable/puzzle_add_image" />

            <TextView
                android:id="@+id/save_image_text"
                style="@style/WrapWrap" />

            <LinearLayout
                style="@style/WrapWrap"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/WrapWrap"
                    android:layout_marginLeft="@dimen/editor_text_margin">

                    <TextView
                        style="@style/TextStyleAccent"
                        android:layout_marginRight="@dimen/editor_text_margin"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/puzzle_name"
                        style="@style/WrapWrap"
                        android:hint="@string/puzzle_name"
                        android:inputType="textCapSentences" />

                </LinearLayout>

                <LinearLayout
                    style="@style/WrapWrap"
                    android:layout_marginLeft="@dimen/editor_text_margin">

                    <TextView
                        style="@style/TextStyleAccent"
                        android:layout_marginRight="@dimen/editor_text_margin"
                        android:text="@string/price" />

                    <EditText
                        android:id="@+id/puzzle_price"
                        style="@style/WrapWrap"
                        android:hint="@string/currency"
                        android:inputType="numberDecimal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrap"
            android:layout_margin="@dimen/editor_text_margin">

            <TextView
                style="@style/TextStyleAccent"
                android:layout_marginRight="@dimen/editor_text_margin"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/minus_button"
                style="@style/ButtonStyle"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/puzzle_quantity"
                style="@style/WrapWrap"
                android:layout_margin="@dimen/editor_margin"
                android:hint="@string/zero"
                android:inputType="number"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/plus_button"
                style="@style/ButtonStyle"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrap"
            android:layout_margin="@dimen/editor_text_margin">

            <TextView
                style="@style/TextStyleAccent"
                android:layout_marginRight="@dimen/editor_text_margin"
                android:text="@string/supplier" />

            <LinearLayout
                style="@style/WrapWrap"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/supplier_name"
                    style="@style/WrapWrap"
                    android:hint="@string/supplier_name"
                    android:inputType="textCapSentences" />

                <EditText
                    android:id="@+id/supplier_phone"
                    style="@style/WrapWrap"
                    android:hint="@string/supplier_phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/supplier_email"
                    style="@style/WrapWrap"
                    android:hint="@string/supplier_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            style="@style/WrapWrap"
            android:padding="@dimen/fab_margin">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/phone_order"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_phone" />

            <TextView
                style="@style/WrapWrap"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"
                android:text="ORDER"
                android:textSize="@dimen/order_text_size" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/email_order"
                style="@style/WrapWrap"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_email" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>