<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item from the puzzle store -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/item_margin">

    <LinearLayout
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/click_container"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/TextStyleDark"
                android:layout_margin="@dimen/item_margin" />

            <LinearLayout style="@style/WrapWrap">

                <TextView
                    style="@style/TextStyleAccent"
                    android:layout_margin="@dimen/item_margin"
                    android:text="@string/quantity" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/TextStyleDark"
                    android:layout_margin="@dimen/item_margin" />
            </LinearLayout>

            <LinearLayout style="@style/WrapWrap">

                <TextView
                    style="@style/TextStyleAccent"
                    android:layout_margin="@dimen/item_margin"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/TextStyleDark"
                    android:layout_margin="@dimen/item_margin" />

                <TextView
                    android:id="@+id/price_currency"
                    style="@style/TextStyleDark"
                    android:layout_margin="@dimen/item_margin"
                    android:text="@string/currency" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/sale_image"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/buy"
            android:src="@drawable/ic_shopping_cart" />

    </LinearLayout>

    <ImageView
        android:id="@+id/puzzle_image"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_empty_puzzle" />

</LinearLayout>