<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    tools:context="com.example.laurentiudragunoi.puzzlestore.CatalogActivity">

    <!-- Empty view for the store -->
    <RelativeLayout
        android:id="@+id/empty_view"
        style="@style/WrapWrap"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_store_image"
            style="@style/WrapWrap"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_empty_puzzle" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/TextStyleDark"
            android:layout_below="@+id/empty_store_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/item_margin"
            android:text="@string/empty_view_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <ImageView
            android:id="@+id/sad_image"
            style="@style/WrapWrap"
            android:layout_below="@id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sad_face" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/TextStyle"
            android:layout_below="@+id/sad_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/item_margin"
            android:text="@string/populate_store"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/textLight" />

    </RelativeLayout>

    <!--Store list puzzles-->
    <ListView
        android:id="@+id/list"
        style="@style/MatchMatch" />

    <!--FAB for populating the list of items-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/WrapWrap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_note_add" />

</RelativeLayout>
